--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -39,6 +39,7 @@ $sidebar-spacing: 1.25rem;
 
 .sidebar > .logo {
   margin-bottom: $sidebar-spacing;
+  max-width: 100%;
 }
 
 .sidebar-block {
