--- a/sphinx_harumaru_themes/haruki_dark_theme/static/main.css
+++ b/sphinx_harumaru_themes/haruki_dark_theme/static/main.css
@@ -12239,6 +12239,7 @@ dl.field-list > dt.field-odd, dl.field-list > dt.field-even {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  max-width: 100%;
 }
 .body section img.align-left {
   margin-left: 0;
@@ -12311,6 +12312,7 @@ body {
 
 .sidebar > .logo {
   margin-bottom: 1.25rem;
+  max-width: 100%;
 }
 
 .sidebar-block:not(:last-child) {
